# stratos

./: .gitignore  Cargo.toml  README.md  build  build.sh  web.html
.github/workflows/: ci.yml
data/: cert.pem  key.pem
deb/: postinst  preinst  prerm  stratos.conf  stratos.service
src/: analyze.rs  handler.rs  http.rs  lib.rs  main.rs  meta.rs  parse.rs
src/common/: consts.rs  functions.rs  mod.rs  types.rs
web/: head.html  index.html  options.html  style.css
