[package]
name = "stratos"
version = "0.1.11"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/ltheinrich/stratos"
description = "Stratosphere balloon log analyzer"
readme = "README.md"

[dependencies]
kern = "1.2.0"
lhi = "0.0.2"
plotlib = "0.5.1"

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
depends = "rustc, cargo"
priority = "optional"
section = "science"
maintainer-scripts = "deb/"
assets = [
    ["target/release/stratos", "usr/bin/", "755"],
    ["deb/stratos.conf", "etc/stratos.conf", "644"],
    ["deb/stratos.service", "etc/systemd/system/stratos.service", "644"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
conf-files = [
    "/etc/stratos.conf",
    "/etc/systemd/system/stratos.service"
]
extended-description = "Stratos analyzes the log file of stratosphere balloon flights"
