[package]
name = "stratos"
version = "0.1.13"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"
license = "ISC"
repository = "https://github.com/ltheinrich/stratos"
description = "Stratosphere balloon log analyzer"
readme = "README.md"

[dependencies]
kern = { version = "1.8.3", features = ["tls"] }
plotlib = { git = "https://github.com/milliams/plotlib", branch = "dependabot/cargo/svg-0.13.0" }

[profile.release]
lto = true
codegen-units = 1

[package.metadata.deb]
depends = "rustc, cargo"
priority = "optional"
section = "science"
maintainer-scripts = "deb/"
assets = [
    [
        "target/release/stratos",
        "usr/bin/",
        "755",
    ],
    [
        "deb/stratos.conf",
        "etc/stratos.conf",
        "644",
    ],
    [
        "deb/stratos.service",
        "etc/systemd/system/stratos.service",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/stratos/README",
        "644",
    ],
]
conf-files = ["/etc/stratos.conf", "/etc/systemd/system/stratos.service"]
extended-description = "Stratos analyzes the log file of stratosphere balloon flights"
